@@ -15,6 +15,7 @@ icon = str(Path(pkg_resources.resource_filename(__name__, f"../../data/encoders/
 enable_subtitles = True
 enable_audio = True
 enable_attachments = True
+enable_concat = True
 
 from fastflix.encoders.rav1e.command_builder import build
 from fastflix.encoders.rav1e.settings_panel import RAV1E as settings_panel
