@@ -148,8 +148,28 @@ def probe(app: FastFlixApp, file: Path) -> Box:
         raise FlixError(result.stderr)
 
 
+def get_first_concat_item(file):
+    with open(file) as f:
+        for line in f:
+            if line.strip().startswith("#"):
+                continue
+            elif line.strip().startswith("file"):
+                filename = Path(line.strip()[5:].strip("'\""))
+                if not filename.is_absolute():
+                    filename = file.parent / filename
+                if not filename.exists():
+                    raise FlixError(f'No file "{filename}" exists')
+                return filename
+            else:
+                raise FlixError("concat file must start with `file` on each line.")
+
+
 def parse(app: FastFlixApp, **_):
-    data = probe(app, app.fastflix.current_video.source)
+    source = app.fastflix.current_video.source
+    if source.name.lower().endswith("txt"):
+        source = get_first_concat_item(source)
+        app.fastflix.current_video.concat = True
+    data = probe(app, source)
     if "streams" not in data:
         raise FlixError(f"Not a video file, FFprobe output: {data}")
     streams = Box({"video": [], "audio": [], "subtitle": [], "attachment": [], "data": []})
