@@ -3,6 +3,7 @@
 ## Version 4.5.0
 
 * Adding #267 new themes (thanks to Onyx)
+* Adding #115 ability to provide concat file (thanks to Marco Ravich)
 
 ## Version 4.4.2
 
